# my_project

./: .gitignore  CMakeLists.txt  ReadMe.md
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
include/my_project/: my_project.h
src/: my_project.cpp
